--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -52,6 +52,6 @@ table th {
   background: rgba(0, 0, 0, 0.5);
 }
 /* Mine */
-.logo-image {
+/* .logo-image {
   mix-blend-mode: color-burn;
-}
+} */
