--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -52,6 +52,20 @@ table th {
   background: rgba(0, 0, 0, 0.5);
 }
 /* Mine */
+
+.linear-gradient {
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 14%,
+    rgba(74, 27, 194, 1) 61%,
+    rgba(196, 187, 174, 1) 100%
+  );
+}
+.custom-btn {
+  background-color: chartreuse;
+  color: crimson;
+}
 /* .logo-image {
   mix-blend-mode: color-burn;
 } */
