Formatting, stories WIP,fixed hamburger in mobile, fixed footer typo

--- a/frontend/src/scss/custom.scss
+++ b/frontend/src/scss/custom.scss
@@ -4,7 +4,7 @@ $theme-colors: (
   //   'accent-background': #ffffff,
   //   'black-fade': #36343a,
   //SECONDARY-FONT-COLOR
-  //'white': whitesmoke//PRIMARY-FONT-COLOR,,,
+  //'white': whitesmoke//PRIMARY-FONT-COLOR,,,,
 );
 @import '~bootstrap/scss/bootstrap.scss';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
